--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   <a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
   <a href="#"><i class="fa fa-fw fa-search"></i> Search</a> 
   <a href="#"><i class="fa fa-fw fa-envelope"></i> Contact</a> 
-  <a href="#"><i class="fa fa-fw fa-user"></i> Login</a>
+  <a href="login.html"><i class="fa fa-fw fa-user"></i> Login</a>
 </div>
 
 
@@ -65,13 +65,13 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <h3> Zuwena's SHOP </h3>
 
 <p font-size:100%> BidhaaZaKubuniwa </p>
-<p font-size:100%>BidhaaZaKubuniwa.com deals with improvised and technically made artifacts at BidhaaZaKubuniwa we host a variety of products </p>
+<p font-size:100%>bidhaaZaKubuniwa.com deals with improvised and technically made artifacts <br> At BidhaaZaKubuniwa we host a variety of products </p>
 <p>
 <ol type="1">
 
 bidhaaZaKubuniwa, a website showcasing innovative and creatively designed artifacts:
 <li>Curated collection of unique and creatively designed artifacts that showcase innovation and technical expertise.</li>
-<li>Showcasing a diverse range of products, including electronics, home decor, fashion accessories, and more.</li>
+<li>Showcasing a diverse range of products, including coconut grater[mbuzi], home decorations, fashion accessories and many more.</li>
 <li>Each artifact is carefully crafted to combine functionality, aesthetics, and technological innovation.</li>
 <li>Collaborations with talented designers and inventors who push the boundaries of traditional design.</li>
 <li>Products that seamlessly blend art and technology, resulting in visually appealing and functional pieces.</li>
